--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/spm_assignment?serverTimezone=CST
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8500
+mybatis.type-aliases-package=cn.edu.njust.dev.ses.main.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
+logging.level.org.hibernate.SQL=trace
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
