--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,17 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>6.1.1</version>
+                <configuration>
+                    <url>jdbc:mysql://localhost:3306/spm_assignment?serverTimezone=CST</url>
+                    <driver>com.mysql.cj.jdbc.Driver</driver>
+                    <user>root</user>
+                    <password>root</password>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.7</version>
