add cloud support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ logging.level.org.hibernate.SQL=trace
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+
+aliyun.ufile.access-key-id=LTAI4Fv56HXkZUZNmAq12MeN
+aliyun.ufile.access-key-secret=OZiLloSTrwPNIEgABSkkzWd5s7u9p2
+aliyun.ufile.bucket-name=brave-heart
+aliyun.ufile.endpoint=oss-cn-shanghai.aliyuncs.com
