--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8500
 mybatis.type-aliases-package=cn.edu.njust.dev.ses.main.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
 logging.level.org.hibernate.SQL=trace
-flyway.baselineOnMigrate=true
+spring.flyway.baseline-on-migrate=true
 
 
 spring.servlet.multipart.max-file-size=10MB
